--- a/_includes/sagamore_footer.html
+++ b/_includes/sagamore_footer.html
@@ -9,4 +9,5 @@
 </footer>
 
 <script type="text/javascript" src="{{ site.baseurl }}/js/dist/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/js/dist/modernizr.custom.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/js/dist/script.min.js"></script>
