--- a/css/src/sagamore/entypo_icons/style.css
+++ b/css/src/sagamore/entypo_icons/style.css
@@ -5468,7 +5468,8 @@ section#fund_investments{
     position: relative;
     /*width: 335px;*/
     height: 400px;
-    border: 1px so#contact .contact_iconsen;
+    border: 1px solid #f2f2f2;
+    overflow: hidden;
 }
 #direct_investments .revel_team_member .description{
     margin-bottom: 20px;
