--- a/css/src/sagamore/entypo_icons/style.css
+++ b/css/src/sagamore/entypo_icons/style.css
@@ -5697,17 +5697,14 @@ section#fund_investments{
     background: white;
     display: block;
     width: 100%;
+    max-width: 246px;
     padding: 10px 5px;
-    opacity: 1;
+    opacity: 0.99;
     min-height: 40px;
     color: #375193;
 }
 #team .revel_overlayed .overlay_front .revel_team_member_link{
-    position: absolute;
-    left: 0;
-    bottom: -180px;
-    z-index: 2;
-    margin-top: 0;
+    margin: -60px auto 0;
     height: 243px;
     -moz-transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
@@ -5717,7 +5714,7 @@ section#fund_investments{
     margin-top: 1.5em;
 }
 #team .revel_overlayed.active .overlay_front .revel_team_member_link{
-    bottom: 0;
+    margin-top: -246px;
     opacity: 0.9;
 }
 #team .revel_overlayed.active .revel_team_member_link{
