--- a/css/src/sagamore/entypo_icons/style.css
+++ b/css/src/sagamore/entypo_icons/style.css
@@ -5758,10 +5758,16 @@ section#fund_investments{
     padding: 10px;
 }
 #contact .contact_icons{
-    background: url("../images/contact_icons.png") scroll no-repeat left center transparent;
+    background: url("../images/contact_icons_2.png") scroll no-repeat left center #375193;
     width: 306px;
     height: 202px;
-    margin: 0 auto 40px auto;
+    margin: 0 auto;
+    animation: animBg 4s ease-in-out infinite;
+}
+@keyframes animBg {
+    0%   { background-color: #375193; }
+    50%  { background-color: #6F757A; }
+    100% { background-color: #375193; }
 }
 #contact .revel_column_dd_span4:nth-child(2) .contact_icons{
     background-position: -306px center;
