--- a/_includes/sagamore_head.html
+++ b/_includes/sagamore_head.html
@@ -1,6 +1,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Sagamore - Home Page{{ site.env }}</title>
+    <title>Sagamore - Home Page</title>
     <meta name="description" content="Sagamore HTML5 premium template">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
