--- a/css/src/sagamore/revolution_captions.css
+++ b/css/src/sagamore/revolution_captions.css
@@ -747,7 +747,7 @@ text-shadow:none;
 background-color:transparent;
 opacity:0.7;
 border-width:1px;
-border-color:rgb(255, 255, 255);
+border-color:transparent;
 border-style:solid;
 }
 
