--- a/css/src/sagamore/entypo_icons/style.css
+++ b/css/src/sagamore/entypo_icons/style.css
@@ -5718,6 +5718,7 @@ section#fund_investments{
 #team .revel_overlayed .overlay_front .revel_team_member_link{
     margin: -60px auto 0;
     height: 245px;
+    overflow: auto;
     -moz-transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
