--- a/css/src/sagamore/responsive.css
+++ b/css/src/sagamore/responsive.css
@@ -13,7 +13,15 @@
 
 
 @media only screen and (min-width: 980px) and (max-width: 1079px) {
-	.container,
+    .revel_column_dd_span3{
+        width: 48%;
+        margin-left: 2% !important;
+    }
+    .revel_column_dd_span3:nth-child(2n+1) {
+        margin-left: 0 !important;
+    }
+
+    .container,
 	.revel_container,
 	.revel_team_member_modal .revel_container{
 		width: 960px;
@@ -36,7 +44,15 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 979px) {
-	.visible-desktop {display: none !important;}
+    .revel_column_dd_span3{
+        width: 48%;
+        margin-left: 2% !important;
+    }
+    .revel_column_dd_span3:nth-child(2n+1) {
+        margin-left: 0 !important;
+    }
+
+    .visible-desktop {display: none !important;}
 	.visible-tablet {display: inherit !important;}
 	.visible-phablet {display: none !important;}
 	.visible-phone {display: none !important;}
