reduce the space in the footer

--- a/css/src/sagamore/entypo_icons/style.css
+++ b/css/src/sagamore/entypo_icons/style.css
@@ -5401,7 +5401,7 @@ figure.effect-chico:hover p {
 #abdev_main_footer{
     color: #898787;
     text-align: center;
-    padding: 34px 0 45px 0;
+    padding: 0 0 45px 0;
 }
 
 #footer_copyright{
