--- a/css/src/sagamore/entypo_icons/style.css
+++ b/css/src/sagamore/entypo_icons/style.css
@@ -5723,7 +5723,7 @@ section#fund_investments{
     position: relative;
     /*width: 245px;*/
     height: 245px;
-    border: 1px solid #f2f2f2;
+    /*border: 1px solid #f2f2f2;*/
     margin-bottom: 0;
     overflow: hidden;
 }
