--- a/css/src/sagamore/responsive.css
+++ b/css/src/sagamore/responsive.css
@@ -41,6 +41,18 @@
 		width: 33.3%;
 	}
 
+    #history .revel_column_dd_span4:nth-child(3n+1) {
+        background-position: -14px center;
+    }
+
+    #history .revel_column_dd_span4:nth-child(3n) {
+        background-position: -703px center;
+    }
+
+    #history .revel_column_dd_span4:last-child {
+        background-position: -703px center;
+    }
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -133,6 +145,18 @@
 		padding-top: 0;
 		padding-bottom: 20px;
 	}
+
+    #history .revel_column_dd_span4:nth-child(3n+1) {
+        background-position: -49px center;
+    }
+
+    #history .revel_column_dd_span4:nth-child(3n) {
+        background-position: -738px center;
+    }
+
+    #history .revel_column_dd_span4:last-child {
+        background-position: -738px center;
+    }
 
 }
 
@@ -307,6 +331,28 @@
 		font-size: 100px;
 		line-height: 100px;
 	}
+
+    #history .revel_column_dd_span4 {
+        background: none;
+        width: 270px;
+        margin-left: auto;
+        margin-right: auto;
+        float: none;
+    }
+    #history .revel_column_dd_span4 .timeline {
+        background: none;
+        float: left;
+        color: #375193;
+        margin-right: 10px;
+        font-size: 18px;
+        line-height: 25px;
+        vertical-align: middle;
+    }
+    #history .revel_column_dd_span4 .desc {
+        float: left;
+        line-height: 25px;
+        vertical-align: middle;
+    }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
