--- a/_includes/sagamore_head.html
+++ b/_includes/sagamore_head.html
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Sagamore - Home Page</title>
-    <meta name="description" content="Sagamore HTML5 premium template">
+    <meta name="description" content="Sagamore invests in private and public equity funds in order to access great investors at each stage of the capital and innovation cycle. We have made over 50 targeted investments in China-focused funds with top-tier managers and key sector exposure.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <!--[if lt IE 9]>
