--- a/css/src/sagamore/responsive.css
+++ b/css/src/sagamore/responsive.css
@@ -157,6 +157,10 @@
     #history .revel_column_dd_span4:last-child {
         background-position: -738px center;
     }
+    
+    #contact .revel_column_dd_span6:nth-child(2) .contact_icons {
+    background-position: -306px center;
+	}
 
 }
 
