--- a/css/src/sagamore/responsive.css
+++ b/css/src/sagamore/responsive.css
@@ -52,6 +52,9 @@
     #history .revel_column_dd_span4:last-child {
         background-position: -703px center;
     }
+    #contact .revel_column_dd_span6:nth-child(2) .contact_icons {
+    background-position: -306px center;
+	}
 
 }
 
@@ -157,7 +160,7 @@
     #history .revel_column_dd_span4:last-child {
         background-position: -738px center;
     }
-    
+
     #contact .revel_column_dd_span6:nth-child(2) .contact_icons {
     background-position: -306px center;
 	}
@@ -358,6 +361,9 @@
         vertical-align: middle;
         font-size: 16px;
     }
+    #contact .revel_column_dd_span6:nth-child(2) .contact_icons {
+    background-position: -306px center;
+	}
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
